syntax = "proto3";

package email;

import "google/protobuf/empty.proto";

service EmailService {
  rpc Send (Email) returns (Email) {}
  rpc FindOne (EmailById) returns (Email) {}
  rpc FindAll (google.protobuf.Empty) returns (EmailList) {}
  rpc Delete (EmailById) returns (google.protobuf.Empty) {}
}

message CreateEmail {
  string receiver = 1;
  string subject = 2;
  string body = 3;
  repeated string attachments = 4;
}

message Email {
  string id = 1;
  string receiver = 2;
  string subject = 3;
  string body = 4;
  repeated string attachments = 5;
  string createdAt = 6;
}

message EmailById {
  string id = 1;
}

message EmailList {
  repeated Email emails = 1;
}